--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
 
 
-  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.12.06969696/firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyAlJRV_uaKYXi4t9bdDlU55VI3jU9jtWUw",
-      authDomain: "mu-ridesharing.firebaseapp.com",
-      databaseURL: "https://mu-ridesharing.firebaseio.com",
-      projectId: "mu-ridesharing",
-      storageBucket: "mu-ridesharing.appspot.com",
-      messagingSenderId: "509399610383"
+      apiKey: "AI",
+      authDomain: "m",
+      databaseURL: "https://righthere.firebaseio.com",
+      projectId: "m",
+      storageBucket: "mu",
+      messagingSenderId: "5"
     };
     firebase.initializeApp(config);
   </script>
@@ -43,7 +43,7 @@
 
       <script src="index.js"></script>
 
-      <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/4.12.06969696/firebase.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
 
@@ -61,12 +61,12 @@ var apiKey = getParameterByName('apiKey')
       // Configure the Firebase SDK.
 
       var config = {
-        apiKey: "AIzaSyAlJRV_uaKYXi4t9bdDlU55VI3jU9jtWUw",
-        authDomain: "mu-ridesharing.firebaseapp.com",
-        databaseURL: "https://mu-ridesharing.firebaseio.com",
-        projectId: "mu-ridesharing",
-        storageBucket: "mu-ridesharing.appspot.com",
-        messagingSenderId: "509399610383"
+        apiKey: "AI",
+        authDomain: "mu",
+        databaseURL: "ht",
+        projectId: "mu",
+        storageBucket: "mu",
+        messagingSenderId: "50"
       };
 
 
