--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 var mode = getParameterByName('mode');
 
 var actionCode =  getParameterByName('oobCode');
+      console.log(actionCode);
 
 var apiKey = getParameterByName('apiKey')
 
