--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AI",
-      authDomain: "m",
-      databaseURL: "https://righthere.firebaseio.com",
-      projectId: "m",
-      storageBucket: "mu",
-      messagingSenderId: "5"
+      apiKey: "AIzaSyBwXLqClZIwiWtf1AGILs-vqfrU-R8rbH4",
+      authDomain: "plus-one-56dd1.firebaseapp.com",
+      databaseURL: "https://plus-one-56dd1.firebaseio.com",
+      projectId: "plus-one-56dd1",
+      storageBucket: "plus-one-56dd1.appspot.com",
+      messagingSenderId: "238101545936"
     };
     firebase.initializeApp(config);
   </script>
@@ -62,12 +62,12 @@ var apiKey = getParameterByName('apiKey')
       // Configure the Firebase SDK.
 
       var config = {
-        apiKey: "AI",
-        authDomain: "mu",
-        databaseURL: "ht",
-        projectId: "mu",
-        storageBucket: "mu",
-        messagingSenderId: "50"
+          apiKey: "AIzaSyBwXLqClZIwiWtf1AGILs-vqfrU-R8rbH4",
+          authDomain: "plus-one-56dd1.firebaseapp.com",
+          databaseURL: "https://plus-one-56dd1.firebaseio.com",
+          projectId: "plus-one-56dd1",
+          storageBucket: "plus-one-56dd1.appspot.com",
+          messagingSenderId: "238101545936"
       };
 
 
