--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 
-  <title>Thumbs-Out User Verification</title>
+  <title>PlusOne User Verification</title>
 
   <link href="https://fonts.googleapis.com/css?family=Titillium-Web-LightItallic:300,400,500,700" rel="stylesheet">
 
