--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
   <div class="mainDiv" align="center">
-  <h1 id="msg">Loading...Please stay on this page...</h1>
+  <h1 id="msg">Loading...Please stay on this page for PlusOne verification...</h1>
 
 
   </div>
