--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ var apiKey = getParameterByName('apiKey')
       // Configure the Firebase SDK.
 
 
-  var firebaseConfig = {
+  var config = {
     apiKey: "AIzaSyBwXLqClZIwiWtf1AGILs-vqfrU-R8rbH4",
     authDomain: "plus-one-56dd1.firebaseapp.com",
     databaseURL: "https://plus-one-56dd1.firebaseio.com",
@@ -72,7 +72,7 @@ var apiKey = getParameterByName('apiKey')
     appId: "1:238101545936:web:f8f1e95b2e67aca5fe2fd5"
   };
   // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
+  firebase.initializeApp(config);
       
       
 //       var config = {
