--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ var apiKey = getParameterByName('apiKey')
 
 
 
-//       var app = firebase.initializeApp(config);
+      var app = firebase.initializeApp(config);
       var auth = app.auth();
       
       
