--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var apiKey = getParameterByName('apiKey')
       firebase.auth().checkActionCode(actionCode)
                               .then(function(userInfo){
                               var usersEmail = userInfo.data.email;
-                              var parsedEmail = "wchapman97mecom"; //parse this later
+                              var parsedEmail = "wchapmantcuedu"; //parse this later
                               var ref = firebase.database().ref();
                               alert(usersEmail);
                               ref.child('AllUserEmails').child(parsedEmail).once('value').then(function(snapshot) {
