--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
 
 
-<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
-    
+ <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>    
   <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
@@ -46,8 +45,9 @@
 
       <script src="index.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
-    <script>
+ <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+  
+  <script>
     document.addEventListener('DOMContentLoaded', function() {
 
 
