--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ var apiKey = getParameterByName('apiKey')
 
 
 
-                                  var uid = child.val()
+                                  var uid = snapshot.val()
 
                                   
 
