--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ var apiKey = getParameterByName('apiKey')
                                     "v" : "verified"
                                 })
 
-                                var message = document.getElementById("msg").innerHTML = "You Are Verified!!";
+                                var message = document.getElementById("msg").innerHTML = "Verification Complete! Return to PlusOne.";
 
 
 
